# text-splitter

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-image.yml
src/: config.rs  main.rs  processor.rs
tests/: Dockerfile  cli.rs  run_proc.rs
tests/inputs/: files2process.txt
tests/outputs/: eutxo.json  example--gift-card.json  example--vesting.json
