[package]
name = "text-splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
text-splitter = { version = "0.6", features = ["tokenizers"] }
tokenizers = { version = "0.15", features = ["http"] }
serde_json = "1.0"
axum = "0.8.0"
tokio =  { version = "1.42.0", features = ["full"] }
serde = "1.0.217"
anyhow = "1.0.95"
httpc-test = "0.1.10"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
